// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeaconInfo renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "height": "30%",
      "justifyContent": "center",
      "width": "95%",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ff9900",
        "borderRadius": 50,
        "elevation": 8,
        "paddingHorizontal": 30,
        "paddingVertical": 20,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      numberOfLines={1}
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 42,
          "fontWeight": "bold",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Test Type
    </Text>
  </View>
  <View
    style={
      Object {
        "height": "3%",
        "width": "80%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "95%",
      }
    }
  >
    <Text />
    <View
      style={
        Object {
          "width": "5%",
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#009688",
          "borderRadius": 50,
          "elevation": 8,
          "flex": 1,
          "height": "80%",
          "justifyContent": "center",
          "width": "70%",
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        numberOfLines={1}
        style={
          Object {
            "color": "#fff",
            "fontSize": 42,
            "fontWeight": "bold",
            "textTransform": "uppercase",
          }
        }
      >
        Test Place
      </Text>
    </View>
  </View>
</View>
`;

exports[`HorizontalSeparator renders correctly 1`] = `
<View
  style={
    Object {
      "height": "3%",
      "width": "80%",
    }
  }
/>
`;

exports[`LargeButton renders correctly 1`] = `
<View
  accessibilityLabel="Test accessibility label"
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#093f74",
      "elevation": 8,
      "height": "30%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Text
    adjustsFontSizeToFit={true}
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "fontSize": 42,
        "fontWeight": "bold",
        "justifyContent": "center",
        "textAlign": "center",
        "textTransform": "uppercase",
      }
    }
  >
    Tap to repeat
  </Text>
</View>
`;

exports[`MainScreen renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    accessibilityLabel="Tap here to repeat the previous audio output"
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#093f74",
        "elevation": 8,
        "height": "30%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 42,
          "fontWeight": "bold",
          "justifyContent": "center",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Tap to repeat
    </Text>
  </View>
  <View
    style={
      Object {
        "height": "3%",
        "width": "80%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": "30%",
        "justifyContent": "center",
        "width": "95%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ff9900",
          "borderRadius": 50,
          "elevation": 8,
          "paddingHorizontal": 30,
          "paddingVertical": 20,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        numberOfLines={1}
        style={
          Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 42,
            "fontWeight": "bold",
            "textAlign": "center",
            "textTransform": "uppercase",
          }
        }
      >
        Point of Interest 
      </Text>
    </View>
    <View
      style={
        Object {
          "height": "3%",
          "width": "80%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "95%",
        }
      }
    >
      <Text />
      <View
        style={
          Object {
            "width": "5%",
          }
        }
      />
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#009688",
            "borderRadius": 50,
            "elevation": 8,
            "flex": 1,
            "height": "80%",
            "justifyContent": "center",
            "width": "70%",
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            Object {
              "color": "#fff",
              "fontSize": 42,
              "fontWeight": "bold",
              "textTransform": "uppercase",
            }
          }
        >
          Cafe 
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": "3%",
        "width": "80%",
      }
    }
  />
  <View
    accessibilityLabel="Tap here for more information"
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#093f74",
        "elevation": 8,
        "height": "30%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 42,
          "fontWeight": "bold",
          "justifyContent": "center",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Tap for more info
    </Text>
  </View>
</View>
`;

exports[`VerticalSeparator renders correctly 1`] = `
<View
  style={
    Object {
      "width": "5%",
    }
  }
/>
`;
